// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inputs validation store > can be created 1`] = `
{
  "getData": [Function],
  "resetEntitiesInputsErrors": [Function],
  "resetEntityInputError": [Function],
  "resetEntityInputsErrors": [Function],
  "setEntitiesInputsErrors": [Function],
  "setEntityInputError": [Function],
  "setEntityInputsErrors": [Function],
  "subscribe": [Function],
  "validateEntitiesInputs": [Function],
  "validateEntityInput": [Function],
  "validateEntityInputs": [Function],
}
`;

exports[`inputs validation store > can set a reset a single entity input error 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
    "title": "title error",
  },
}
`;

exports[`inputs validation store > can set a reset a single entity input error 2`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "title": "title error",
  },
}
`;

exports[`inputs validation store > can set a reset a single entity input error 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can set a reset a single entity input error 4`] = `"Unkown entity input \\"invalid\\"."`;

exports[`inputs validation store > can set a reset all inputs errors for a all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "title": "title error",
  },
}
`;

exports[`inputs validation store > can set a reset all inputs errors for a all entities 2`] = `Map {}`;

exports[`inputs validation store > can set a reset all inputs errors for a single entity 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
    "title": "title error",
  },
}
`;

exports[`inputs validation store > can set a reset all inputs errors for a single entity 2`] = `Map {}`;

exports[`inputs validation store > can set a reset all inputs errors for a single entity 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can set a single entity input error 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "Some error",
    "title": "Title error",
  },
}
`;

exports[`inputs validation store > can set a single entity input error 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can set a single entity input error 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`inputs validation store > can set inputs errors for a all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "some error",
    "title": "another error",
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": "some error",
    "title": "another error",
  },
}
`;

exports[`inputs validation store > can set inputs errors for a all entities 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can set inputs errors for a all entities 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`inputs validation store > can set inputs errors for a all entities 4`] = `Map {}`;

exports[`inputs validation store > can set multiple input errors for a single entity 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "some error",
    "title": "another error",
  },
}
`;

exports[`inputs validation store > can set multiple input errors for a single entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can set multiple input errors for a single entity 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`inputs validation store > can validate a all inputs of a single entity 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
  },
}
`;

exports[`inputs validation store > can validate a all inputs of a single entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can validate a all inputs of all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    "maxLength": undefined,
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": undefined,
    "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
  },
}
`;

exports[`inputs validation store > can validate a single entity input 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
  },
}
`;

exports[`inputs validation store > can validate a single entity input 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`inputs validation store > can validate a single entity input 3`] = `"Unkown entity input \\"invalid\\"."`;
